implementations/rust/ockam/ockam/tests/node_test/fail_if_passed_param_is_self.stderr
error: Input argument should be of type `ockam::Context`
 --> tests/node_test/fail_if_passed_param_is_self.rs:6:18
  |
6 | async fn my_test(self) -> ockam_core::Result<()> {}
  |                  ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/node_test/fail_if_passed_param_is_self.rs:5:1
  |
5 | / #[ockam::test]
6 | | async fn my_test(self) -> ockam_core::Result<()> {}
  | |___________________________________________________^ consider adding a `main` function to `$DIR/tests/node_test/fail_if_passed_param_is_self.rs`
